# Interview-Insight-AI-Demo

./: .env.example  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements-api.txt  requirements-dev.txt  requirements-llm.txt  requirements.txt  tasks.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  WALKTHROUGH_SCRIPT.md
eval/: eval_cases.json
eval/golden_outputs/: onboarding_repository_expected.json
examples/: demo_report.md
prompts/: quote_extraction.md  study_synthesis.md
sample_data/interviews/: P01_product_manager.md  P02_researcher.md  P03_designer.md  P04_founder.md  P05_customer_success.md
scripts/: demo.bat  demo.ps1  eval.bat  eval.ps1  serve.bat  serve.ps1  test.bat  test.ps1
src/gq_insight_copilot/: __init__.py  api.py  cli.py  eval_runner.py  evaluation.py  ingest.py  llm.py  models.py  report.py  synthesis.py  text.py  vector_store.py
src/gq_insight_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_eval_runner.py  test_ingest.py  test_report.py  test_synthesis.py  test_vector_store.py
